# RHEFs74

./: .gitignore  LICENSE
backend/: Cargo.toml
backend/src/: encryption.rs  main.rs  rules.rs
doc/: architecture.md  guide.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/components/: CountdownTimer.tsx  Instructions.tsx  KeyForm.tsx  PhishingButton.tsx
frontend/src/pages/: index.tsx  success.tsx
frontend/src/styles/: Home.module.css  globals.css
frontend/src/utils/: api.ts
