[package]
name = "ransomware"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.7"
block-modes = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
dotenvy = "0.15"
hex = "0.4"
generic-array = "0.14"
